fixed visibility of time line on Safari

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -27,7 +27,6 @@ h1{
 h2{
     font-size: 2.5rem;
     color: $bleu-gris;
-    margin: 2rem 0 0 0;
 }
 
 h3{
