--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -22,6 +22,7 @@
     grid-column:2/4;
     color: $gris;
     justify-self: center;
+    align-self: center;
    
 
 }
